Refactor of Models for Categories and Products - Added JQuery-UI
Refactor of Categories and Products Models code. Moved all individual
models into one master file for each controller as per best practices.

Added jQuery-Ui via package manager.

Implemented jQuery-ui Accordion class on categories details pages.

--- a/Visual Studio Solution/AcleUrbanGardens.Web/Views/Category/Delete.cshtml
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/Views/Category/Delete.cshtml
@@ -131,6 +131,7 @@
             </div>
         }
     }
+    <p>If you delete the category @Model.Category.Name, the sub-categories and products above will be moved to the @Model.UnassignedCategory category.</p>
 </div>
 
 <!--Return Links-->
