--- a/Visual Studio Solution/AcleUrbanGardens.Web/Views/Category/Index.cshtml
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/Views/Category/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<AcleUrbanGardens.Domain.Category>
+﻿@using GridMvc.Html
+@using GridMvc.Filtering
+@using AcleUrbanGardens.Web.Helpers
+@model IEnumerable<AcleUrbanGardens.Domain.Category>
 
 @{
     ViewBag.Title = "Categories";
@@ -10,7 +13,7 @@
     @Html.ActionLink("Administration Panel", "Index", "Admin") |
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+@*<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -18,6 +21,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
+        <th></th>
         <th></th>
     </tr>
 
@@ -32,6 +36,54 @@
         <td>
             @Html.ActionLink("Create " + category.Name + " Sub-Category", "CreateSubCategory", "Category", new { categoryId = category.Id }, null)
         </td>
+        <td>
+            @Html.ActionImage("Details", new { category.Id }, "~/Content/Images/" + category.ImagePath, "Details")
+        </td>
     </tr>
 }
-</table>
+</table>*@
+<div>
+    @Html.Grid(Model).Columns(columns =>
+    {
+        /* Adding "Name" column: */
+        columns.Add(c => c.Name)
+                .Encoded(false)
+                .Sanitized(false)
+                .Titled("Name")
+                .RenderValueAs(c =>
+                @<b>
+                    @Html.ActionLink(c.Name, "Details", "Category", new { c.Id }, null)
+                </b>);
+
+    /* Adding "Description" column: */
+    columns.Add(c => c.Description)
+            .Filterable(true)
+            .Titled("Description");
+
+    columns.Add(c => c.ImagePath)
+        .Encoded(false)
+        .Sanitized(false)
+        .Titled("Image")
+        .RenderValueAs(c =>
+             @Html.ActionImage("Details", new { c.Id }, "~/Content/Images/" + c.ImagePath, "Details", "200px", "40px")
+        );
+
+    /* Adding "IsDeleted" column: */
+    columns.Add(c => c.IsDeleted)
+        .Titled("Is Deleted")
+        .Encoded(false)
+        .Sanitized(false)
+        .SetWidth(40)
+        .RenderValueAs(o => Html.CheckBox("checked", false));
+
+    /* Adding not mapped column, that renders body, using inline Razor html helper */
+    columns.Add()
+            .Encoded(false)
+            .Sanitized(false)
+            .RenderValueAs(c =>
+                        @<b>
+                            @Html.ActionLink("Create " + c.Name + " Sub-Category", "CreateSubCategory", "Category", new { categoryId = c.Id }, null)
+                        </b>);
+
+    }).SetRowCssClasses(item => item.IsDeleted ? "warning" : string.Empty).WithPaging(5).Sortable().Filterable().WithMultipleFilters()
+</div>
