Refactored ProductImage field to ImagePath
Refactored ProductImage field to ImagePath

Fixed some issues with scripts in BundleConfig.cs

--- a/Visual Studio Solution/AcleUrbanGardens.Web/Views/Product/Details.cshtml
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/Views/Product/Details.cshtml
@@ -65,11 +65,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ProductImage)
+            @Html.DisplayNameFor(model => model.ImagePath)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ProductImage)
+            @Html.DisplayFor(model => model.ImagePath)
         </dd>
 
         <dt>
